--- a/CentralBankPublicWebService/CentralBankPublicWebService.csproj
+++ b/CentralBankPublicWebService/CentralBankPublicWebService.csproj
@@ -67,13 +67,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="PublicService.asmx" />
     <Content Include="Web.config" />
-    <Content Include="WebServices\MathService.asmx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebServices\MathService.asmx.cs">
-      <DependentUpon>MathService.asmx</DependentUpon>
+    <Compile Include="PublicService.asmx.cs">
+      <DependentUpon>PublicService.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
