--- a/CentralBankPublicWebService/CentralBankPublicWebService.csproj
+++ b/CentralBankPublicWebService/CentralBankPublicWebService.csproj
@@ -94,6 +94,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\CreditHistoryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicService.asmx.cs">
       <DependentUpon>PublicService.asmx</DependentUpon>
