--- a/CentralBankPublicWebService/CentralBankPublicWebService.csproj
+++ b/CentralBankPublicWebService/CentralBankPublicWebService.csproj
@@ -95,6 +95,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\CreditHistoryResponse.cs" />
+    <Compile Include="DTOs\FinancialHealthResult.cs" />
+    <Compile Include="DTOs\InflationRateResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicService.asmx.cs">
       <DependentUpon>PublicService.asmx</DependentUpon>
