--- a/CentralBankPublicWebService/CentralBankPublicWebService.csproj
+++ b/CentralBankPublicWebService/CentralBankPublicWebService.csproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <Compile Include="Constants\WebServiceMethodsId.cs" />
     <Compile Include="DTOs\CreditHistoryResponse.cs" />
+    <Compile Include="DTOs\CurrencyExchangeResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicService.asmx.cs">
       <DependentUpon>PublicService.asmx</DependentUpon>
