--- a/CentralBankPublicWebService/CentralBankPublicWebService.csproj
+++ b/CentralBankPublicWebService/CentralBankPublicWebService.csproj
@@ -95,7 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants\WebServiceMethodsId.cs" />
-    <Compile Include="DTOs\CreditHistoryResponse.cs" />
+    <Compile Include="DTOs\CreditHistoryResult.cs" />
     <Compile Include="DTOs\CurrencyExchangeResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicService.asmx.cs">
