--- a/CentralBankPublicWebService/CentralBankPublicWebService.csproj
+++ b/CentralBankPublicWebService/CentralBankPublicWebService.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
@@ -90,6 +91,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="PrivateService.asmx" />
     <Content Include="PublicService.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -99,6 +101,11 @@
     <Compile Include="Constants\WebServiceMethodsId.cs" />
     <Compile Include="DTOs\CreditHistoryResult.cs" />
     <Compile Include="DTOs\CurrencyExchangeResult.cs" />
+    <Compile Include="DTOs\PublicWebServiceHistoricalUseResult.cs" />
+    <Compile Include="PrivateService.asmx.cs">
+      <DependentUpon>PrivateService.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicService.asmx.cs">
       <DependentUpon>PublicService.asmx</DependentUpon>
