--- a/CentralBankPublicWebService/Web.config
+++ b/CentralBankPublicWebService/Web.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
+  <appSettings>
+    <add key="PrivateServicePassword" value="123456" />
+  </appSettings>
   <connectionStrings>
     <add name="default" providerName="System.Data.ProviderName" connectionString="Server=localhost;User ID=root;Password=123;Database=wservices" />
   </connectionStrings>
